# ckb-global-registry

./: Cargo.toml  README.md
contracts/demo-linked-list-type/: Cargo.toml  Makefile  README.md
contracts/demo-linked-list-type/src/: entry.rs  error.rs
contracts/demo-linked-list-type/src/operations/: create.rs  destroy.rs  update.rs
crates/ckb-linked-list-tool/: Cargo.toml  README.md
crates/ckb-linked-list-tool/src/: error.rs  lib.rs  types.rs
crates/demo-linked-list-lib/: Cargo.toml  Makefile  README.md
crates/demo-linked-list-lib/schemas/: types.mol
crates/demo-linked-list-lib/src/: lib.rs  types.rs
tests/: Cargo.toml
tests/src/contracts/: mod.rs
tests/src/contracts/demo_linked_list_type/: create.rs  destroy.rs  mod.rs  update.rs
