[workspace]
resolver = "2"

members = [
  "crates/ckb-linked-list-tool",
  "crates/demo-linked-list-lib",
  # Please don't remove the following line, we use it to automatically
  # detect insertion point for newly generated crates.
  # @@INSERTION_POINT@@
  "contracts/demo-linked-list-type",
  "tests",
]

[profile.release]
overflow-checks = true
strip = true
codegen-units = 1
